--- a/src/Component/App/App.css
+++ b/src/Component/App/App.css
@@ -71,3 +71,28 @@
 .complete{
   text-decoration: line-through;
 }
+.label-success{
+  border: 1px solid yellow;
+  background-color: #2bce2b;
+  color: white;
+}
+.label-danger{
+  border: 1px solid yellow;
+    background-color: #e86e17;
+    color: white;
+}
+#root{
+  background: #f5f5f5;
+}
+.filters{
+  list-style-type: none;
+}
+ul li {
+  float: left;
+  margin: 10px;
+  height: 28px;
+  border-radius: 3px;
+  background: #cad6ca;
+  width: 80px;
+  text-align: center;
+}
